--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +18,9 @@
 		}
 		.inp_box{
 			padding: 5px;
+			border-radius: 5px;
+			outline: none;
+			border: 2px solid #585858;
 		}
 		li{
 			width: 0px!important;
@@ -36,12 +40,16 @@
           	font-size: 40px;
           }
 		}
+		li{
+			cursor: pointer;
+		}
 	</style>
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="jumbotron bg_jumbo">
 			<h1 class="display-4 text-center mob_heading">This is a To-Do List</h1>
+			<p class="lead text-center"></p>
 			<form class="text-center">
 				<input class="inp_box" id="enteredtext" type="text" name="Task" placeholder="Enter task to be Performed" size="25">
 				<br>
@@ -59,6 +67,10 @@
 				    var item = document.createTextNode(EnteredValue);
 				    var node = document.createElement("li");
 				    node.appendChild(item);
+				    node.setAttribute("title", "Click if this task has been completed.");
+				    node.addEventListener("click", function(){
+				    node.style.display="none";
+				    });
 				    document.getElementById("displayText").appendChild(node);
 			    }
             }
