--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -49,7 +49,7 @@
 	<div class="container-fluid">
 		<div class="jumbotron bg_jumbo">
 			<h1 class="display-4 text-center mob_heading">This is a To-Do List</h1>
-			<p class="lead text-center"></p>
+			<p class="lead text-center">An easy way to keep a track of your work</p>
 			<form class="text-center">
 				<input class="inp_box" id="enteredtext" type="text" name="Task" placeholder="Enter task to be Performed" size="25">
 				<br>
