--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -16,7 +16,7 @@
 			<div class="row no-gutters">
 				<div class="col-12">
 					<div class="row position-relative no-gutters">
-				    <img src="images/desk_img.jpg" class="w-100 d-lg-block d-none">
+				    <img src="images/Desk_img.jpg" class="w-100 d-lg-block d-none">
 				    <img src="images/Mob_img.jpg" class="w-100 Desk_img d-block d-lg-none">
 					    <div class="row position-absolute no-gutters align-self-center">
 					    	<p class="bg_font px-lg-5 px-3 mob_bg-font">Hi! I'm<br> Rohit Kotian<br> Web Developer</p>
