--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -43,8 +43,8 @@
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay">
 						 &nbsp;
 					</div>
-					<img src="/static/images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-					<img src="/static/images/mobileBanner.png" class="d-lg-none d-block w-100">
+					<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
+					<img src="images/mobileBanner.png" class="d-lg-none d-block w-100">
 					<div class="position-absolute align-self-center ml-50">
 						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-2 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
 						<p class="txtWhite mr-200 pb-3 px-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
@@ -69,7 +69,7 @@
 				 <div class="row borderLine mx-auto bg-info"></div>
 				 <div class="row pt60">
 				 	<div class="col-lg-6 col-12 pb-3">
-				 		<img src="/static/images/about-us.jpg" alt="">
+				 		<img src="images/about-us.jpg" alt="">
 				 	</div>
 				 	<div class="col-lg-6 col-12">
 				 		<p class="pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste laborum eligendi nostrum modi suscipit officia pariatur voluptatibus tenetur magni, obcaecati, autem sunt quibusdam illo explicabo quod magnam odit porro cum.</p>
@@ -198,30 +198,30 @@
 				 <div class="row borderLine mx-auto bg-info"></div>
 				<div class="row pt60">
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-1.jpg" alt="">
+						<img src="images/portfolio-1.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-2.jpg" alt="">
+						<img src="images/portfolio-2.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-3.jpg" alt="">
+						<img src="images/portfolio-3.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-4.jpg" alt="">
+						<img src="images/portfolio-4.jpg" alt="">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-5.jpg" alt="">
+						<img src="images/portfolio-5.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-6.jpg" alt="">
+						<img src="images/portfolio-6.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-7.jpg" alt="">
+						<img src="images/portfolio-7.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="/static/images/portfolio-8.jpg" alt="">
+						<img src="images/portfolio-8.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -275,19 +275,19 @@
 			<div class="col-10 offset-2">
 				<div class="row">
 					<div class="col-2 px-0">
-						<img src="/static/images/logo-2.png" class="w-100" alt="">
+						<img src="images/logo-2.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="/static/images/logo-3.png" class="w-100" alt="">
+						<img src="images/logo-3.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="/static/images/logo-4.png" class="w-100" alt="">
+						<img src="images/logo-4.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="/static/images/logo-3.png" class="w-100" alt="">
+						<img src="images/logo-3.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="/static/images/logo-1.png" class="w-100" alt="">
+						<img src="images/logo-1.png" class="w-100" alt="">
 					</div>
 				</div>
 			</div>
@@ -306,7 +306,7 @@
 				<div class="row pt-5 pb-5">
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="/static/images/member-1.jpg" alt="">
+							<img src="images/member-1.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Head of Marketing</p>
@@ -316,7 +316,7 @@
 					</div>
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="/static/images/member-2.jpg" alt="">
+							<img src="images/member-2.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Web Developer</p>
@@ -326,7 +326,7 @@
 					</div>
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="/static/images/member-3.jpg" alt="">
+							<img src="images/member-3.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Head of Management</p>
@@ -349,7 +349,7 @@
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay">
 						 &nbsp;
 					</div>
-					<img src="/static/images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
+					<img src="images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
 						<div class="position-absolute w-100">
 							<h1 class="text-center txtWhite pt-5 mt-5 pb-3">Our Greatest Plans</h1>
 							<p class="text-center txtWhite px-200 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
@@ -397,7 +397,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="/static/images/post-1.jpg" alt="">
+							<img src="images/post-1.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
@@ -407,7 +407,7 @@
 					</div>
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="/static/images/post-2.jpg" alt="">
+							<img src="images/post-2.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
@@ -417,7 +417,7 @@
 					</div>
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="/static/images/post-3.jpg" alt="">
+							<img src="images/post-3.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
