--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -371,17 +371,22 @@
 </section>
 <!-- Section Our Greatest Plan Ends -->
 <!-- Section CEO Info Begins -->
-<section id="ceoSection">
+<section id="ceoSection" class="mb-5">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
 			<div class="col-12">
 				<div class="card py120 bg-info">
 					<span class="fa fa-comments fa-3x txtWhite text-center"></span>
-					<p class="txtWhite pt-3 text-center px-200 m-px-10">
+					<p class="txtWhite pt-3 text-center px-200 m-px-10 pb-5">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse unde temporibus dolorem sunt repudiandae officia quod veniam, quaerat velit. Aut id harum adipisci, tempora aspernatur nobis deserunt unde culpa dolorem!. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, maiores.
 					</p>
 				</div>
-			</div>
+				<div class="position-relative bgWhite w-100 text-center ">
+					<img src="images/clients-1.jpg" class="rounded-circle position-absolute imgAdjustment" alt="">
+					<p class="pt150 bold fs20">Abul Mal Muhit</p>
+					<p class="pt-2 small">CEO, Company Name</p>
+				</div>
+				</div>
 		</div>
 	</div>
 </section>
