--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -44,11 +44,11 @@
 						 &nbsp;
 					</div>
 					<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-					<img src="images/mobileBanner.png" class="d-lg-none d-block w-100">
+					<img src="images/mobileBanner.png" class="d-lg-none d-block w-100 mob_img">
 					<div class="position-absolute align-self-center ml-50">
-						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-2 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
-						<p class="txtWhite mr-200 pb-3 px-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
-						<span class="px-2">
+						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
+						<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
+						<span class="px-3">
 							<button class="btn btn-info border-radius50 mr-2 btn-lg">EXPLORE US</button>
 							<button class="btn border-radius50 btn-lg">LEARN MORE</button>
 						</span>
