--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -1,40 +1,4 @@
-<!DOCTYPE html >
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
-<head>
-    <meta name="title" content="Imversed.com">
-    <meta name="pageviews" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
- <meta name="google-site-verification" content="6X7uXdO2qj4FdsFRmeoA3jOIdmnDsX57b7PDZPR4Oic" />
-    <meta name="msvalidate.01" content="F960C50BC74EF8E44CE7B0B1A481FAF9" />
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
-<!-- Websites main css including all style sheets -->
-<link href="css/main-newdesign.css" media="all" type="text/css" rel="stylesheet">
-
-<!-- Roboto Font -->
-<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:100,200,300,400,500,700,800,900&display=swap" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-
-<!-- Oxygen Font -->
-<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700&display=swap" rel="stylesheet">
-
-<!-- Staatliches -->
-<link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
-<body class="base" id="home">
-    <div id="page-wrapper" class="mrk-clearfix">
-        <div id="top">
-            <!-- COMPONENTE -->
-            <div class="SiteEditCP">
-                    <div>
-                            <!-- banner Section starts -->
-		    </div>
-		    <!-- banner Section starts -->
+<!-- banner Section starts -->
 <section id="firstSection">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
@@ -49,8 +13,8 @@
 						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
 						<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
 						<span class="px-3">
-							<button class="btn btn-info border-radius50 mr-2 btn-lg">EXPLORE US</button>
-							<button class="btn border-radius50 btn-lg">LEARN MORE</button>
+							<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
+							<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
 						</span>
 					</div>
 				</div>
@@ -86,7 +50,7 @@
 				 				<p class="pb-1"><span class="fa fa-check text-info">&nbsp;</span>UI/UX Design</p>
 				 			</div>
 				 		</div>
-				 		<button class="btn btn-info btn-lg border-radius50">LEARN MORE</button>
+				 		<button class="btn btn-info btn-lg border-radius50 custom_btn">LEARN MORE</button>
 				 	</div>
 				 </div>
 			</div>
@@ -241,7 +205,7 @@
 					<div class="col-lg-6 col-12 pb-5">
 						<h1 class="pb-3">Simple to Start</h1>
 						<p class="pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quod, optio. Reiciendis explicabo soluta eveniet unde, minima animi magni vel eos ipsa sapiente laborum iure nostrum expedita laboriosam numquam modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, fugit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, sapiente.</p>
-						<button class="btn btn-lg btn-info border-radius50 ">CONTACT US</button>
+						<button class="btn btn-lg btn-info border-radius50 custom_btn">CONTACT US</button>
 					</div>
 					<div class="col-lg-1 col-12"></div>
 					<div class="col-lg-5 col-12">
@@ -341,26 +305,63 @@
 </section>
 <!-- Section Our team Ends -->
 <!-- Section Our Greatest Plan Begins -->
-<section id="GreatestPlan">
+<!-- <section id="GreatestPlan" class="mobBackground">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
 			<div class="col-12">
 				<div class="row no-gutters position-relative">
-					<div class="position-absolute col-12 h-100 w-100 imgOverlay">
+					<div class="position-absolute col-12 h-100 w-100 imgOverlay d-lg-block d-none">
 						 &nbsp;
 					</div>
 					<img src="images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
-						<div class="position-absolute w-100">
+						<div class="position-absolute mobSection">
 							<h1 class="text-center txtWhite pt-5 mt-5 pb-3">Our Greatest Plans</h1>
 							<p class="text-center txtWhite px-200 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
 							<div class="row borderLine mx-auto bg-info"></div>
 							<div class="container">
 								<div class="row pt-5">
-									<div class="col-lg-4 col-12">
-									   
+									<div class="col-lg-4 col-12 pt-5">
+									   <div class="card px-5 pb-5 pt-2">
+									   		<p class="pt-3">BASIC</p>
+									   		<h2 class="display-4 py-1 text-info">$99</h2>
+									   		<p class="small pb-5 darkGrey">Perfect for single freelancers who work by themselves</p>
+									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey">10 Email Account</p>
+									   		<p class="pb-3 small darkGrey">Script Installer</p>
+									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   </div>
 									</div>
-									<div class="col-lg-4 col-12"></div>
-									<div class="col-lg-4 col-12"></div>
+									<div class="col-lg-4 col-12 pt-5">
+										<div class="card px-5 pb-5 pt-2">
+									   		<p class="pt-3">BASIC</p>
+									   		<h2 class="display-4 py-1 text-info">$99</h2>
+									   		<p class="small pb-5 darkGrey">Suitable for small businesses with upto 5 employees</p>
+									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey">10 Email Account</p>
+									   		<p class="pb-3 small darkGrey">Script Installer</p>
+									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   </div>
+									</div>
+									<div class="col-lg-4 col-12 pt-5">
+										<div class="card px-5 pb-5 pt-2">
+									   		<p class="pt-3">BASIC</p>
+									   		<h2 class="display-4 py-1 text-info">$99</h2>
+									   		<p class="small pb-5 darkGrey">Perfect for single freelancers who work by themselves</p>
+									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey">10 Email Account</p>
+									   		<p class="pb-3 small darkGrey">Script Installer</p>
+									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   </div>
+									</div>
 								</div>
 							</div>
 					    </div>
@@ -368,14 +369,14 @@
 		</div>
 	</div>
   </div>	
-</section>
+</section> -->
 <!-- Section Our Greatest Plan Ends -->
 <!-- Section CEO Info Begins -->
 <section id="ceoSection" class="mb-5">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
 			<div class="col-12">
-				<div class="card py120 bg-info">
+				<div class="card py120 bg-info noBorder br_0">
 					<span class="fa fa-comments fa-3x txtWhite text-center"></span>
 					<p class="txtWhite pt-3 text-center px-200 m-px-10 pb-5">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse unde temporibus dolorem sunt repudiandae officia quod veniam, quaerat velit. Aut id harum adipisci, tempora aspernatur nobis deserunt unde culpa dolorem!. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, maiores.
@@ -406,7 +407,7 @@
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50">READ MORE</button>
+								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -416,7 +417,7 @@
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50">READ MORE</button>
+								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -426,7 +427,7 @@
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50">READ MORE</button>
+								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -459,7 +460,7 @@
 							<input type="email" placeholder="Your Email" size="40" class="w-100 inp-box mb-3">
 							<input type="text" placeholder="Subject" size="40" class="w-100 inp-box mb-3">
 							<input type="text" placeholder="Message" class="w-100 msg-box mb-3">
-							<button class="btn btn-block btn-info">SUBMIT</button>
+							<button class="btn btn-block btn-info contact_btn">SUBMIT</button>
 						</div>
 					</div>
 				</div>
@@ -501,22 +502,13 @@
 			</div>
 		</div>
 	</div>
+    <div class="w-100 greyBorder"></div>
+    <div class="row no-gutters">
+    	<div class="container">
+    		<div class="col-12">
+    			<p class="pt-3 text-center small grey pb-3">COPYRIGHT 2019. ALL RIGHTS RESERVED</p>
+    		</div>
+    	</div>
+    </div>
 </section>
 <!-- Section Footer Ends -->
-
-            </div> 
-        </div>
-    <!-- jQuery library -->
-
-<script src="https://code.jquery.com/jquery-1.12.0.min.js" integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8=" crossorigin="anonymous"></script>
-
-<!-- Lazy Laod CD -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="js/main-newdesign.js" ></script>
-
-</body>
-</html>
