--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -1,4 +1,39 @@
-<!-- banner Section starts -->
+<!DOCTYPE html >
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+    <meta name="title" content="Imversed.com">
+    <meta name="pageviews" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+ <meta name="google-site-verification" content="6X7uXdO2qj4FdsFRmeoA3jOIdmnDsX57b7PDZPR4Oic" />
+    <meta name="msvalidate.01" content="F960C50BC74EF8E44CE7B0B1A481FAF9" />
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
+<!-- Websites main css including all style sheets -->
+<link href="css/main-newdesign.css" media="all" type="text/css" rel="stylesheet">
+
+<!-- Roboto Font -->
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:100,200,300,400,500,700,800,900&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+
+<!-- Oxygen Font -->
+<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700&display=swap" rel="stylesheet">
+
+<!-- Staatliches -->
+<link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></head>
+<body class="base" id="home">
+    <div id="page-wrapper" class="mrk-clearfix">
+        <div id="top">
+            <!-- COMPONENTE -->
+            <div class="SiteEditCP">
+                        <div>
+                            <!-- banner Section starts -->
+    <!-- banner Section starts -->
 <section id="firstSection">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
@@ -7,8 +42,8 @@
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay">
 						 &nbsp;
 					</div>
-					<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-					<img src="images/mobileBanner.png" class="d-lg-none d-block w-100 mob_img">
+					<img src="/static/images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
+					<img src="/static/images/mobileBanner.png" class="d-lg-none d-block w-100 mob_img">
 					<div class="position-absolute align-self-center ml-50">
 						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
 						<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
@@ -33,7 +68,7 @@
 				 <div class="row borderLine mx-auto bg-info"></div>
 				 <div class="row pt60">
 				 	<div class="col-lg-6 col-12 pb-3">
-				 		<img src="images/about-us.jpg" alt="">
+				 		<img src="/static/images/about-us.jpg" alt="">
 				 	</div>
 				 	<div class="col-lg-6 col-12">
 				 		<p class="pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste laborum eligendi nostrum modi suscipit officia pariatur voluptatibus tenetur magni, obcaecati, autem sunt quibusdam illo explicabo quod magnam odit porro cum.</p>
@@ -162,30 +197,30 @@
 				 <div class="row borderLine mx-auto bg-info"></div>
 				<div class="row pt60">
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-1.jpg" alt="">
+						<img src="/static/images/portfolio-1.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-2.jpg" alt="">
+						<img src="/static/images/portfolio-2.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-3.jpg" alt="">
+						<img src="/static/images/portfolio-3.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-4.jpg" alt="">
+						<img src="/static/images/portfolio-4.jpg" alt="">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-5.jpg" alt="">
+						<img src="/static/images/portfolio-5.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-6.jpg" alt="">
+						<img src="/static/images/portfolio-6.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-7.jpg" alt="">
+						<img src="/static/images/portfolio-7.jpg" alt="">
 					</div>
 					<div class="col-lg-3 col-6 pb-4">
-						<img src="images/portfolio-8.jpg" alt="">
+						<img src="/static/images/portfolio-8.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -239,19 +274,19 @@
 			<div class="col-10 offset-2">
 				<div class="row">
 					<div class="col-2 px-0">
-						<img src="images/logo-2.png" class="w-100" alt="">
+						<img src="/static/images/logo-2.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="images/logo-3.png" class="w-100" alt="">
+						<img src="/static/images/logo-3.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="images/logo-4.png" class="w-100" alt="">
+						<img src="/static/images/logo-4.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="images/logo-3.png" class="w-100" alt="">
+						<img src="/static/images/logo-3.png" class="w-100" alt="">
 					</div>
 					<div class="col-2 px-0">
-						<img src="images/logo-1.png" class="w-100" alt="">
+						<img src="/static/images/logo-1.png" class="w-100" alt="">
 					</div>
 				</div>
 			</div>
@@ -270,7 +305,7 @@
 				<div class="row pt-5 pb-5">
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="images/member-1.jpg" alt="">
+							<img src="/static/images/member-1.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Head of Marketing</p>
@@ -280,7 +315,7 @@
 					</div>
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="images/member-2.jpg" alt="">
+							<img src="/static/images/member-2.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Web Developer</p>
@@ -290,7 +325,7 @@
 					</div>
 					<div class="col-lg-4 col-12">
 						<div class="card">
-							<img src="images/member-3.jpg" alt="">
+							<img src="/static/images/member-3.jpg" alt="">
 							<div class="card-body text-center">
 								<h5 class="card-title fs20 lh20">Micheal Jonson</h5>
 								<p class="small pb-2">Head of Management</p>
@@ -313,7 +348,7 @@
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay d-lg-block d-none">
 						 &nbsp;
 					</div>
-					<img src="images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
+					<img src="/static/images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
 						<div class="position-absolute mobSection">
 							<h1 class="text-center txtWhite pt-5 mt-5 pb-3">Our Greatest Plans</h1>
 							<p class="text-center txtWhite px-200 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
@@ -383,7 +418,7 @@
 					</p>
 				</div>
 				<div class="position-relative bgWhite w-100 text-center ">
-					<img src="images/clients-1.jpg" class="rounded-circle position-absolute imgAdjustment" alt="">
+					<img src="/static/images/clients-1.jpg" class="rounded-circle position-absolute imgAdjustment" alt="">
 					<p class="pt150 bold fs20">Abul Mal Muhit</p>
 					<p class="pt-2 small">CEO, Company Name</p>
 				</div>
@@ -403,7 +438,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="images/post-1.jpg" alt="">
+							<img src="/static/images/post-1.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
@@ -413,7 +448,7 @@
 					</div>
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="images/post-2.jpg" alt="">
+							<img src="/static/images/post-2.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
@@ -423,7 +458,7 @@
 					</div>
 					<div class="col-lg-4 col-12 pb-3">
 						<div class="card">
-							<img src="images/post-3.jpg" alt="">
+							<img src="/static/images/post-3.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
 								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
@@ -512,3 +547,20 @@
     </div>
 </section>
 <!-- Section Footer Ends -->
+                 
+
+
+    <!-- jQuery library -->
+
+<script src="https://code.jquery.com/jquery-1.12.0.min.js" integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8=" crossorigin="anonymous"></script>
+
+<!-- Lazy Laod CD -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="js/main-newdesign.js" ></script>
+
+</body>
+</html>
