--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -340,21 +340,21 @@
 </section>
 <!-- Section Our team Ends -->
 <!-- Section Our Greatest Plan Begins -->
-<!-- <section id="GreatestPlan" class="mobBackground">
+<section id="GreatestPlanSection">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
-			<div class="col-12">
-				<div class="row no-gutters position-relative">
+			<div class="col-12 position-relative">
+				<div class="row no-gutters">
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay d-lg-block d-none">
 						 &nbsp;
 					</div>
-					<img src="images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
-						<div class="position-absolute mobSection">
+					<img src="/static/images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
+					<div class="col-12 position-absolute mobSection">
 							<h1 class="text-center txtWhite pt-5 mt-5 pb-3">Our Greatest Plans</h1>
-							<p class="text-center txtWhite px-200 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
+							<p class="text-center txtWhite pb-3 px-lg-200 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
 							<div class="row borderLine mx-auto bg-info"></div>
 							<div class="container">
-								<div class="row pt-5">
+								<div class="row pt-5 pb-5">
 									<div class="col-lg-4 col-12 pt-5">
 									   <div class="card px-5 pb-5 pt-2">
 									   		<p class="pt-3">BASIC</p>
@@ -400,11 +400,11 @@
 								</div>
 							</div>
 					    </div>
+				</div>
 			</div>
 		</div>
 	</div>
-  </div>	
-</section> -->
+</section>
 <!-- Section Our Greatest Plan Ends -->
 <!-- Section CEO Info Begins -->
 <section id="ceoSection" class="mb-5">
