--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -34,6 +34,7 @@
                         <div>
                             <!-- banner Section starts -->
     <!-- banner Section starts -->
+<!-- banner Section starts -->
 <section id="firstSection">
 	<div class="container-fluid px-0">
 		<div class="row no-gutters">
@@ -348,7 +349,7 @@
 					<div class="position-absolute col-12 h-100 w-100 imgOverlay d-lg-block d-none">
 						 &nbsp;
 					</div>
-					<img src="/static/images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
+					<img src="images/pricing-bg.jpg" class="w-100 d-lg-block d-none" alt="">
 					<div class="col-12 position-absolute mobSection">
 							<h1 class="text-center txtWhite pt-5 mt-5 pb-3">Our Greatest Plans</h1>
 							<p class="text-center txtWhite pb-3 px-lg-200 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta qui similique culpa non, doloribus laboriosam dolore omnis saepe sint quia, numquam esse cum nihil deserunt ullam ipsa quidem vitae.</p>
@@ -412,7 +413,7 @@
 		<div class="row no-gutters">
 			<div class="col-12">
 				<div class="card py120 bg-info noBorder br_0">
-					<span class="fa fa-comments fa-3x txtWhite text-center"></span>
+					<span class="fa fa-comments fa-flip-horizontal fa-3x txtWhite text-center"></span>
 					<p class="txtWhite pt-3 text-center px-200 m-px-10 pb-5">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse unde temporibus dolorem sunt repudiandae officia quod veniam, quaerat velit. Aut id harum adipisci, tempora aspernatur nobis deserunt unde culpa dolorem!. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus, maiores.
 					</p>
@@ -546,6 +547,8 @@
     	</div>
     </div>
 </section>
+<!-- Section Footer Ends -->
+
 <!-- Section Footer Ends -->
                  
 
