--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -44,7 +44,7 @@
 						 &nbsp;
 					</div>
 					<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-					<img src="images/mobileBanner.png" class="d-lg-none d-block w-100 mob_img">
+					<img src="images/mobileBanner.PNG" class="d-lg-none d-block w-100 mob_img">
 					<div class="position-absolute align-self-center ml-50">
 						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
 						<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
@@ -360,13 +360,13 @@
 									   <div class="card px-5 pb-5 pt-2">
 									   		<p class="pt-3">BASIC</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
-									   		<p class="small pb-5 darkGrey">Perfect for single freelancers who work by themselves</p>
-									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
-									   		<p class="pb-3 small darkGrey">10 Email Account</p>
-									   		<p class="pb-3 small darkGrey">Script Installer</p>
-									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
-									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
-									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<p class="small pb-5 darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Perfect for single freelancers who work by themselves</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 Email Account</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Script Installer</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
 									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
 									   </div>
 									</div>
@@ -374,13 +374,13 @@
 										<div class="card px-5 pb-5 pt-2">
 									   		<p class="pt-3">BASIC</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
-									   		<p class="small pb-5 darkGrey">Suitable for small businesses with upto 5 employees</p>
-									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
-									   		<p class="pb-3 small darkGrey">10 Email Account</p>
-									   		<p class="pb-3 small darkGrey">Script Installer</p>
-									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
-									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
-									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<p class="small pb-5 darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Suitable for small businesses with upto 5 employees</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 Email Account</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Script Installer</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
 									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
 									   </div>
 									</div>
@@ -388,13 +388,13 @@
 										<div class="card px-5 pb-5 pt-2">
 									   		<p class="pt-3">BASIC</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
-									   		<p class="small pb-5 darkGrey">Perfect for single freelancers who work by themselves</p>
-									   		<p class="pb-3 small darkGrey">1GB Disk Space</p>
-									   		<p class="pb-3 small darkGrey">10 Email Account</p>
-									   		<p class="pb-3 small darkGrey">Script Installer</p>
-									   		<p class="pb-3 small darkGrey">1 GB Storage</p>
-									   		<p class="pb-3 small darkGrey">10 GB Bandwidth</p>
-									   		<p class="pb-3 small darkGrey">24/7 TechSupport</p>
+									   		<p class="small pb-5 darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Perfect for single freelancers who work by themselves</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 Email Account</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Script Installer</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
+									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
 									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
 									   </div>
 									</div>
