--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -388,7 +388,7 @@
 										<div class="card px-5 pb-5 pt-2">
 									   		<p class="pt-3">BASIC</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
-									   		<p class="small pb-5 darkGrey">Perfect for single freelancers who work by themselves</p>
+									   		<p class="small pb-5 darkGrey">Great for large businesses with more than 5 employees</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 Email Account</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>Script Installer</p>
