--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -32,6 +32,21 @@
       background-color: #1401FE;
       color: #ffffff;
     }
+    .jumbotron{
+      border-radius: 0px!important;
+    }
+    .ftcolor{
+      background-color: #585858;
+    }
+    #footer{
+     bottom: 0px;
+     width: 100%;
+     height: 2.5rem;
+     color: #ffffff!important;
+    }
+    #page-container{
+      min-height: 100vh!important;
+    }
   @media screen and (max-width: 480px){
     .mob_font{
       font-size: 30px!important;
@@ -43,17 +58,21 @@
     .mob_blocker{
       display: block!important;
     }
+
   }
 </style>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid px-0 position-relative" id="page-container">
       <div class="jumbotron bgcolor">
   	   <h1 class="display-4 text-center mt-4 mb-4 mob_font fntcolor shadow"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
       </div> 
   	<div class="center_text">
   		<button class="btn btn-primary mt-3" onclick="fetch()">Get Quote Now!</button>
-      <h3 id="quote" class="mt-lg-5 mt-3"></h3>
+      <h3 id="quote" class="mt-lg-4 mt-3 px-3"></h3>
   	</div>
+    <footer class="bgcolor position-absolute text-center" id="footer">
+      <span>Copyright &copy; 2019 Rkrocks. All Rights Reserved.</span>
+    </footer>
   </div>
   <script>
       function fetch(){
