--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -38,15 +38,6 @@
     .ftcolor{
       background-color: #585858;
     }
-    #footer{
-     bottom: 0px;
-     width: 100%;
-     height: 2.5rem;
-     color: #ffffff!important;
-    }
-    #page-container{
-      min-height: 100vh!important;
-    }
   @media screen and (max-width: 480px){
     .mob_font{
       font-size: 30px!important;
@@ -62,7 +53,7 @@
   }
 </style>
 <body>
-  <div class="container-fluid px-0 position-relative" id="page-container">
+  <div class="container-fluid px-0">
       <div class="jumbotron bgcolor">
   	   <h1 class="display-4 text-center mt-4 mb-4 mob_font fntcolor shadow"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
       </div> 
@@ -70,9 +61,6 @@
   		<button class="btn btn-primary mt-3" onclick="fetch()">Get Quote Now!</button>
       <h3 id="quote" class="mt-lg-4 mt-3 px-3"></h3>
   	</div>
-    <footer class="bgcolor position-absolute text-center" id="footer">
-      <span>Copyright &copy; 2019 Rkrocks. All Rights Reserved.</span>
-    </footer>
   </div>
   <script>
       function fetch(){
